--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,5 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "langgraph>=0.2.53",
     "langchain-openai>=0.2.10",
+    "jsonschema-pydantic>=0.6",
 ]
