--- a/mcp-server-config-example.json
+++ b/mcp-server-config-example.json
@@ -1,17 +1,19 @@
-[
-    {
-        "command": "uvx",
-        "args": ["mcp-server-fetch"]
+{
+  "mcpServers": {
+    "fetch": {
+      "command": "uvx",
+      "args": ["mcp-server-fetch"]
     },
-    {
-        "command": "npx",
-        "args": ["-y", "@modelcontextprotocol/server-brave-search"],
-        "env": {
-            "BRAVE_API_KEY": "super-secret-key"
-        }
+    "brave-search": {
+      "command": "npx",
+      "args": ["-y", "@modelcontextprotocol/server-brave-search"],
+      "env": {
+        "BRAVE_API_KEY": "super-secret-key"
+      }
     },
-    {
-        "command": "npx",
-        "args": ["-y", "github:anaisbetts/mcp-youtube"]
+    "youtube": {
+      "command": "npx",
+      "args": ["-y", "github:anaisbetts/mcp-youtube"]
     }
-]
+  }
+}
