Refactor llm.py and update mcp-server-config-example.json for improved AI assistant functionality.

--- a/mcp-server-config-example.json
+++ b/mcp-server-config-example.json
@@ -1,4 +1,5 @@
 {
+  "systemPrompt": "You are an AI assistant helping a software engineer. Your user is a professional software engineer who works on various programming projects. Today's date is {today_datetime}. I aim to provide clear, accurate, and helpful responses with a focus on software development best practices. I should be direct, technical, and practical in my communication style.",
   "mcpServers": {
     "fetch": {
       "command": "uvx",
