Refactor llm.py to remove dotenv dependency and initialize chat model using server config. Update mcp-server-config-example.json to include LLM configuration with provider, model, and API key settings.

--- a/mcp-server-config-example.json
+++ b/mcp-server-config-example.json
@@ -1,5 +1,11 @@
 {
   "systemPrompt": "You are an AI assistant helping a software engineer. Your user is a professional software engineer who works on various programming projects. Today's date is {today_datetime}. I aim to provide clear, accurate, and helpful responses with a focus on software development best practices. I should be direct, technical, and practical in my communication style.",
+  "llm": {
+    "provider": "openai",
+    "model": "gpt-4o",
+    "api_key": "your-api-key-here",
+    "temperature": 0
+  },
   "mcpServers": {
     "fetch": {
       "command": "uvx",
@@ -9,7 +15,7 @@
       "command": "npx",
       "args": ["-y", "@modelcontextprotocol/server-brave-search"],
       "env": {
-        "BRAVE_API_KEY": "super-secret-key"
+        "BRAVE_API_KEY": "your-brave-api-key-here"
       }
     },
     "youtube": {
