--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "langgraph>=0.2.53",
     "langchain-openai>=0.2.10",
     "jsonschema-pydantic>=0.6",
+    "aiosqlite>=0.20.0",
+    "langgraph-checkpoint-sqlite>=2.0.1",
 ]
 authors = [
     { name = "Adhika Setya Pramudita", email = "adhika.setya.p@gmail.com" }
