--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "jsonschema-pydantic>=0.6",
     "aiosqlite>=0.20.0",
     "langgraph-checkpoint-sqlite>=2.0.1",
+    "rich>=13.9.0",
 ]
 authors = [
     { name = "Adhika Setya Pramudita", email = "adhika.setya.p@gmail.com" }
