feat: add tool call confirmation and list tools command
- Implement confirmation prompts for sensitive tool operations
- Add --list-tools flag to display available LLM tools
- Update config to support tool-specific confirmation requirements
- Improve UX with better progress indication

--- a/mcp-server-config-example.json
+++ b/mcp-server-config-example.json
@@ -21,6 +21,14 @@
     "youtube": {
       "command": "npx",
       "args": ["-y", "github:anaisbetts/mcp-youtube"]
+    },
+    "mcp-server-commands": {
+      "command": "npx",
+      "args": ["mcp-server-commands"],
+      "requires_confirmation": [
+        "run_command",
+        "run_script"
+      ]
     }
   }
 }
