--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "langgraph-checkpoint-sqlite>=2.0.1",
     "rich>=13.9.0",
     "commentjson>=0.9.0",
+    "jsonschema-pydantic>=0.6",
 ]
 authors = [
     { name = "Adhika Setya Pramudita", email = "adhika.setya.p@gmail.com" }
