--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "langgraph>=0.2.53",
     "langchain-openai>=0.2.10",
-    "langchain-google-genai>=2.0.7",
+    # "langchain-google-genai>=2.0.7",
     "aiosqlite>=0.20.0",
     "langgraph-checkpoint-sqlite>=2.0.1",
     "rich>=13.9.0",
@@ -23,7 +23,7 @@ dependencies = [
     "jsonschema-pydantic>=0.6",
     # Required to suppress annoying gemini grpc log
     # See https://stackoverflow.com/questions/78780089/how-do-i-get-rid-of-the-annoying-terminal-warning-when-using-gemini-api
-    "grpcio==1.60.1",
+    # "grpcio==1.60.1",
 ]
 authors = [
     { name = "Adhika Setya Pramudita", email = "adhika.setya.p@gmail.com" }
