--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,14 @@ dependencies = [
     "rich>=13.9.0",
     "commentjson>=0.9.0",
     "jsonschema-pydantic>=0.6",
+    "pywin32>=306; sys_platform == 'win32' or platform_system == 'Windows'",
 ]
+
+[project.optional-dependencies]
+clipboard = [
+    "pngpaste; sys_platform == 'darwin'",
+]
+
 authors = [
     { name = "Adhika Setya Pramudita", email = "adhika.setya.p@gmail.com" }
 ]
