--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ version = "0.3.0"
 description = "Command line interface for MCP client"
 readme = "README.md"
 requires-python = ">=3.12"
+authors = [
+    { name = "Adhika Setya Pramudita", email = "adhika.setya.p@gmail.com" }
+]
+license = { text = "MIT" }
 dependencies = [
     "langchain-anthropic>=0.3.0",
     "langchain>=0.3.8",
@@ -23,20 +27,15 @@ dependencies = [
     "jsonschema-pydantic>=0.6",
     "pywin32>=306; sys_platform == 'win32' or platform_system == 'Windows'",
 ]
-
-[project.optional-dependencies]
-clipboard = [
-    "pngpaste; sys_platform == 'darwin'",
-]
-
-authors = [
-    { name = "Adhika Setya Pramudita", email = "adhika.setya.p@gmail.com" }
-]
-license = { text = "MIT" }
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+]
+
+[project.optional-dependencies]
+clipboard = [
+    "pngpaste; sys_platform == 'darwin'"
 ]
 
 [project.urls]
