--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "commentjson>=0.9.0",
     "jsonschema-pydantic>=0.6",
     "pywin32>=306; sys_platform == 'win32' or platform_system == 'Windows'",
+    "langgraph-prebuilt>=0.1.0",
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
@@ -35,7 +36,8 @@ classifiers = [
 
 [project.optional-dependencies]
 clipboard = [
-    "pngpaste; sys_platform == 'darwin'"
+    "pyperclip>=1.8.2",
+    "pngpaste; sys_platform == 'darwin' and python_version < '3.12'"
 ]
 
 [project.urls]
