--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
+      contents: write  # Required for creating GitHub releases
 
     steps:
       - uses: actions/checkout@v4
@@ -39,5 +40,17 @@ jobs:
           source .venv/bin/activate
           python -m build
 
+      - name: Get version
+        id: get_version
+        run: |
+          echo "VERSION=$(python setup.py --version)" >> $GITHUB_OUTPUT
+
       - name: Publish package to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1 
+        uses: pypa/gh-action-pypi-publish@release/v1
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ steps.get_version.outputs.VERSION }}
+          name: Release v${{ steps.get_version.outputs.VERSION }}
+          generate_release_notes: true 
