DOC: Rebrand llm command to lll in documentation
Update all references from llm to lll command name and from ~/.llm/ to ~/.lll/ config directory to match the wrapper script rename (patch #9).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,4 +46,4 @@ Homepage = "https://github.com/adhikasp/mcp_client_cli"
 Issues = "https://github.com/adhikasp/mcp_client_cli/issues"
 
 [project.scripts]
-llm = "mcp_client_cli.cli:main"
+lll = "mcp_client_cli.cli:main"
