ADD: Reasoning effort and token usage display

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,10 @@ clipboard = [
     "pyperclip>=1.8.2",
     "pngpaste; sys_platform == 'darwin' and python_version < '3.12'"
 ]
+dev = [
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.23.0",
+]
 
 [project.urls]
 Homepage = "https://github.com/adhikasp/mcp_client_cli"
